# Dissimulare

./: Cargo.toml  LICENSE  README.md
crates/ca/: Cargo.toml
crates/ca/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  commands.rs  config.rs  lib.rs  main.rs  seed.rs
crates/core/: Cargo.toml
crates/core/src/: domain_match.rs  fingerprint.rs  handler.rs  html.rs  lib.rs  stats.rs  tracking_params.rs  youtube.rs
crates/core/src/chaos/: data.rs  identity.rs  mod.rs  script.rs
crates/filters/: Cargo.toml
crates/filters/src/: engine.rs  lib.rs  lists.rs  manager.rs  service.rs
crates/platform/: Cargo.toml
crates/platform/src/: cert_store.rs  lib.rs  macos_impl.rs  paths.rs  system_proxy.rs  unsupported_impl.rs  windows_impl.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  main.rs  terminal.rs  theme.rs  ui.rs
crates/tui/src/ui/: consent.rs  dashboard.rs  domain_list.rs  exceptions.rs  menu.rs  message.rs
