[package]
name = "dissimulare-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Dissimulare command-line interface: setup/run/status/uninstall."

[[bin]]
name = "dissimulare"
path = "src/main.rs"

[dependencies]
dissimulare-platform = { workspace = true }
dissimulare-ca = { workspace = true }
dissimulare-filters = { workspace = true }
dissimulare-core = { workspace = true }

hudsucker = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
http = { workspace = true }
getrandom = "0.2"
