[package]
name = "dissimulare-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "The proxy itself: hudsucker HttpHandler wiring filter-engine blocking, tracking-parameter stripping and fingerprint header normalization together."

[dependencies]
dissimulare-filters = { workspace = true }
hudsucker = { workspace = true }
http = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
sha1 = "0.10"
http-body-util = "0.1"
